--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
+# Python bytecode
+__pycache__/
+*.py[cod]
+
 # Virtual environment
 venv/
+env/
 
-# Environment variables / secrets
+# OS files
+.DS_Store
+Thumbs.db
+
+# FAISS index / other large cache files (optional)
+*.pkl
+
+# dotenv file with secrets
 .env
 
-# Python cache
-__pycache__/
-*.pyc
-
-# FAISS index and local data artifacts
-data/faiss_index.pkl
-
-# OS / editor junk
-.DS_Store
+# IDE/editor configs (optional)
+.vscode/
